# kepler-terminal

./: Cargo.toml  README.md
crates/terminal-cli/: Cargo.toml
crates/terminal-cli/src/: main.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: lib.rs  state.rs  vte_adapter.rs
crates/terminal-fixtures/: Cargo.toml
crates/terminal-fixtures/fixtures/: m1-golden.json
crates/terminal-fixtures/fixtures/pty/: non-zero-exit.json  plain-output.json  resize-aware.json
crates/terminal-fixtures/src/: lib.rs
crates/terminal-protocol/: Cargo.toml
crates/terminal-protocol/src/: lib.rs
crates/terminal-pty/: Cargo.toml
crates/terminal-pty/src/: bridge.rs  command.rs  error.rs  event.rs  lib.rs  portable_backend.rs  runtime.rs  session.rs  size.rs
crates/terminal-pty/tests/: live_pty.rs
crates/terminal-render-model/: Cargo.toml
crates/terminal-render-model/src/: lib.rs
docs/: m2-pty-recordings.md  m5-compatibility-release-hardening-report.md  research-map.md
docs/reference-inventory/: alacritty-vte.md  alacritty.md  contour.md  emacs-libvterm.md  ghostling.md  ghostty.md  gnome-vte.md  kitty.md  rio.md  vt100-rust.md  wezterm.md  windows-terminal.md  xterm-js.md
evidence/m5/: evidence-manifest.json  paneflow-shadow-dogfood.json
evidence/m5/dogfood/: live-gpui-summary-2026-07-10.json
tasks/: prd-m1-headless-core-foundation-status.json  prd-m1-headless-core-foundation.md  prd-m2-pty-runtime-harness-status.json  prd-m2-pty-runtime-harness.md  prd-m5-compatibility-release-hardening-status.json
