[package]
name = "terminal-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
terminal-core.workspace = true
toml.workspace = true

[lints]
workspace = true
