[package]
name = "terminal-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
portable-pty.workspace = true

[dev-dependencies]
anyhow = "1.0"
terminal-core.workspace = true

[features]
live-pty-tests = []

[lints]
workspace = true
